test-suite/tests/ui/designated/no_argument_itemless.stderr
error: an argument must match the designated parameter
 --> tests/ui/designated/no_argument_itemless.rs:8:23
  |
8 | impl<#[stated] S> Test<> {}
  |                       ^
