test-suite/tests/ui/designated/no_argument_itemless.rs
use stated::stated;

#[stated(states(A))]
pub struct Test<#[stated] S>;

#[stated]
#[rustfmt::skip] // Stops `<>` from getting removed.
impl<#[stated] S> Test<> {}

fn main() {}
